# CTP500PrinterApp-Rust

./: Cargo.toml  Dioxus.toml  README.md  build-app.sh
src/: app.rs  ble.rs  escpos.rs  main.rs  printer.rs  text_render.rs  types.rs
