[package]
name = "ctp500-printer-app"
version = "0.1.0"
edition = "2021"
description = "Bluetooth LE client for the Core Innovations CTP500 thermal printer (Rust port)"

[[bin]]
name = "ctp500"
path = "src/main.rs"

[dependencies]
# GUI
dioxus         = { version = "0.7", features = ["desktop"] }
dioxus-desktop = "0.7"

# BLE
btleplug   = "0.11"

# Async runtime
tokio      = { version = "1", features = ["full"] }

# Image processing
image      = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }

# Font rasterization
ab_glyph   = "0.2"
imageproc  = "0.24"

# Utilities
regex      = "1"
chrono     = { version = "0.4", features = ["clock"] }
log        = "0.4"
env_logger = "0.11"
futures    = "0.3"
futures-util = "0.3"
base64     = "0.22"
rfd        = "0.15"
